<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>

    <string name="download_details_fragment_label">Download Details</string>

    <string name="title_select_download_file">Select which file to download</string>

    <string name="download_radio_button_text_glide">Glide - Image loading library by BumpTech</string>
    <string name="download_radio_button_text_load_app">LoadApp - Current repository by Udacity</string>
    <string name="download_radio_button_text_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="loading_button_download">Download</string>
    <string name="loading_button_loading">We are loading</string>

    <string name="err_msg_not_selected_download_file">Please select the download file option first!</string>

    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="notification_channel_name">Downloaded files</string>

    <string name="download_status_success">Success</string>
    <string name="download_status_failed">Fail</string>
    <string name="download_status_unknown">Unknown</string>

    <string name="download_notification_title">Download completed</string>
    <string name="download_notification_button_text">Check the status</string>

    <string name="download_file_name_label">File name</string>
    <string name="download_status_label">Status</string>
    <string name="ok">OK</string>

</resources>